<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:minWidth="@dimen/min_width"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@color/main_background"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d_distance"
        android:gravity="center"
        android:text="@string/loose"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_xbig"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/d_distance"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/a_distance"
            android:layout_weight="1"
            android:background="@drawable/dialog_text_background"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/a_distance"
            android:text="@string/start_again"
            android:textColor="@android:color/white"/>


        <TextView
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/a_distance"
            android:layout_weight="1"
            android:background="@drawable/dialog_text_background"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/a_distance"
            android:text="@string/exit"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>