<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_background_pressed"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/a_distance"
            android:text="@string/scores"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_background"
        android:orientation="horizontal"
        android:padding="@dimen/a_distance">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/life_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_life">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/game_label"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_big_height"
            android:gravity="center"
            android:padding="@dimen/b_distance"
            android:text="@string/choose_image"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_xbig"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/image_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_image">

        </android.support.v7.widget.RecyclerView>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/next_lvl"
            android:layout_width="@dimen/text_width"
            android:layout_height="@dimen/text_height"
            android:background="@drawable/next_lvl_txt_background"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/b_distance"
            android:text="@string/next_lvl"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:textSize="@dimen/text_size_small"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>